packages/forge-dsl/fixtures/errors/e04-bad-expr.fable
// expect: FORGE102
VAR x = 1

-> go
=== go ===
~ x = 1 + * 2
-> END
